selfhost/test/typechecker/import/error_duplicate_enum_name.4.out
Error at %FILE_NAME%:3:6
Duplicate name 'Color'
  |  enum Color {}
          ^
This name is also declared at (1:8)
  |  import Color from "./_exports"
            ^
