selfhost/test/typechecker/import/error_duplicate_enum_name.2.abra
import Color from "./_exports"

func Color() {}
